# midscale

./: .env.example  .gitignore  AGENTS.md  INITIAL_IMPLEMENTATION.md  README.md  dev_instructions.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_phase10.py  test_phase12.py  test_phase5.py  test_phase6.py  test_phase8.py  test_phase9.py
backend/alembic/: env.py
backend/alembic/versions/: 1ea06c46da06_add_owner_id_to_networks.py  2c1a3b5e6d7f_add_interface_name_to_networks.py  3d4e5f6a7b8c_add_device_endpoints_table.py  4a5b6c7d8e9f_add_audit_logs_table.py  5f6a7b8c9d0e_add_advertised_routes_and_exit_node.py  6a7b8c9d0e1f_add_node_owned_key_fields.py  737e64bcc13f_add_topology_field_to_networks.py  7b8c9d0e1f2a_make_device_user_id_nullable.py  8c9d0e1f2a3b_add_device_token_prefix.py  9d0e1f2a3b4c_add_nat_sessions.py  ae1b2c3d4e5f_add_relay_sessions.py  b02bde8a120e_initial.py  c3cdac7f1f30_add_endpoint_scoring_fields.py  e44cb5174045_python_side_defaults.py
backend/app/: config.py  database.py  main.py  seed.py
backend/app/api/: deps.py
backend/app/core/: constants.py  logging.py  middleware.py  security.py
backend/app/models/: __init__.py  acl.py  audit.py  device.py  dns.py  endpoint.py  nat_session.py  network.py  preauth_key.py  relay_session.py  route.py  user.py
backend/app/schemas/: acl.py  audit.py  auth.py  daemon.py  device.py  dns.py  nat.py  network.py  preauth_key.py  relay.py  route.py  user.py
backend/app/services/: acl.py  audit.py  auth.py  config_renderer.py  daemon.py  dns_provider.py  (+21 more)
(+64 files in other folders)
